<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_version" translatable="false">1.3.0</string>
    <string name="app_name" translatable="false">Placelet</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_uc">Login</string>
    <string name="logout_uc">Logout</string>
    <string name="bracelet">Bracelet</string>
    <string name="community_uc">Community</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="send">Send</string>
    <string name="id">Bracelet-ID</string>
    <string name="title">Title</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="description">Description</string>
    <string name="select_picture">Select picture</string>
    <string name="upload">Upload</string>
    <string name="current_position">Current location</string>
    <string name="picture_position">Geo-Tag of picture</string>
    <string name="name">Name</string>
    <string name="loading">Loading&#8230;</string>
    <string name="date">Date</string>
    <string name="email">Email</string>
    <string name="options">Settings</string>
    <string name="activate_download">Activate picture download</string>
    <string name="deactivate_download">Deactivate picture download</string>
    <string name="messages_loading">Loading messages</string>
    <string name="bracelets_loading">Loading bracelets</string>
    <string name="user_notextisting">User doesn\'t exist.</string>
    <string name="enter_message">Enter message.</string>
    <string name="account_not_verified">Account not verified.</string>
    <string name="account_notextisting">Account doesn\'t exist.</string>
    <string name="wrong_pasword">Wrong password.</string>
    <string name="pic_download_activated">Picture download activated.</string>
    <string name="pic_download_deactivated">Picture download deactivated.</string>
    <string name="profile_loading">Loading your profile, </string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_library">Pick from gallery</string>
    <string name="coords_captured">Position captured.</string>
    <string name="load_more">Load more</string>
    <string name="activate_gps">Please activate GPS.\nIf you have already done so, please wait.</string>
    <string name="download_pictures">Download pictures</string>
    <string name="download_pictures_summary">Download pictures from the internet.</string>
    <string name="highdef_pictures">HD Pictures in popups</string>
    <string name="highdef_pictures_summary">Download high definition pictures and display them in the popups.</string>
    <string name="refresh">Refresh</string>
    <string name="preview_picture">Preview picture</string>
    <string name="add_photo">Add photo!</string>
    <string name="select_file">Select File</string>
    <string name="repeat_pw">Repeat password</string>
    <string name="register">Register</string>
    <string name="show_register_form">Show register form</string>
    <string name="show_login_form">Show login form</string>
    <string name="message_status">Message Status</string>
    <string name="no_login">Continue without logging in</string>
    <string name="offline">No Internet</string>
    <string name="last_location">Last Location</string>
    <string name="owner">Owner</string>
    <string name="pic_count">Picture Count</string>
    
    <!-- Picture upload error messages -->
    <string name="city_short">City too short!</string>
    <string name="country_short">Country too short!</string>
    <string name="description_short">Description too short!</string>
    <string name="wrong_format">Wrong format!(JPEG, PNG and GIF supported)</string>
    <string name="choose_picture">Select a picture!</string>
    <string name="not_registered">Bracelet not registered!</string>
    <string name="bracelet_not_existing">Bracelet does not exist!</string>
    <string name="too_big">Max picture size: 8MB!</string>
    <string name="enter_title">Enter title!</string>
    <string name="incorrect_id">Enter correct bracelet-ID!</string>
    
    <!-- Register error messages -->
    <string name="different_pws">Passwords don\'t match!</string>
    <string name="name_exists">Username already exists!</string>
    <string name="email_exists">Another user is registered to this email!</string>
    <string name="username_too_short">Username min. 4 letters!</string>
    <string name="username_too_long">Username max. 15 letters!</string>
    <string name="password_too_short">Password min. 6 chars!</string>
    <string name="password_too_long">Password max. 30 chars!</string>
    <string name="invalid_email">Enter correct email!</string>
    <string name="noinput">Enter something!</string>
    <string name="register_success">Registry successful!\nYou\'ll shortly receive an email.</string>
    
    <string name="vor"> </string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago_pl"> days ago</string>
    <string name="weeks_ago_pl"> weeks ago</string>
    <string name="months_ago_pl"> months ago</string>
    <string name="weeks_ago_sg"> week ago</string>
    <string name="months_ago_sg"> month ago</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_iomessage" translatable="false">IOMessageActivity</string>
    <string name="title_activity_upload" translatable="false">UploadActivity</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="title_activity_options" translatable="false">OptionsActivity</string>
    <string name="title_activity_bracelet" translatable="false">BraceletActivity</string>
    <string name="own_pics">Own Pictures</string>
    <string name="own_bracelets">Own Bracelets</string>
    <string name="by">by</string>
    <string name="seen">Seen</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="unsubscribe">unsubscribe</string>
    <string name="unsubscribed">unsubscribed</string>
    <string name="register_bracelet">Register new Bracelet</string>
    <string name="wrong_brid_format">ID has to be 6 letters and numbers!</string>
    <string name="server_problem">Server Problem</string>
    <string name="registered_exclamation"> registered!</string>
    <string name="bracelet_registered_to_you">Bracelet already registered to you!</string>
    <string name="bracelet_registered_someone">Bracelet registered to someone else!</string>
    <string name="bracelet_notextisting">Bracelet does not exist!</string>
    <string name="please_update">Please Update App</string>
    <string name="update">Update</string>
    <string name="remind_later">Remind me later</string>
    <string name="will_be_reloaded">Data will be reloaded</string>
    <string name="reload_everything">Reload everything</string>
    <string name="new_bracelet">New Bracelet</string>
    <string name="new_picture">New Picture</string>
    <string name="send_email">Send Email</string>
    <string name="placelet_copyright" translatable="false">\u00A9 Placelet 2014</string>
    <string name="domains" translatable="false">placelet.de, placelet.net</string>
    <string name="developer">Developer</string>
    <string name="dev_contact" translatable="false">Daniel Schäfer, ds@struckmeierfliesen.de</string>
    <string name="version">Version</string>
    <string name="invalid_comment">No links or empty comments!</string>
    <string name="new_pic">New Picture</string>
    <string name="comment">Comment</string>
    <string name="write_comment">Write comment…</string>
    <string name="add">Add</string>
    <string name="add_user">Add User</string>
    <string name="invalid_username">Only numbers and characters!</string>
    <string name="start_end_colon">Start:\nEnde:</string>
    <string name="no_msg_yourself">You cannot send messages to yourself!</string>
    <string name="map">Map</string>
    <string name="pictures">Pictures</string>

</resources>
