<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    tools:context="${packageName}.${activityClass}" >

    <EditText
        android:id="@+id/uploadID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textNoSuggestions"
        android:layout_marginBottom="4dp"
        android:layout_toStartOf="@+id/strut1"
        android:layout_toLeftOf="@+id/strut1"/>

    <View android:id="@+id/strut1"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/uploadTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text|textAutoCorrect|textAutoComplete"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/uploadID"
        android:layout_toRightOf="@+id/uploadID"/>

    <EditText
        android:id="@+id/uploadCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/uploadTitle"
        android:ems="10"
        android:hint="@string/city"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="textNoSuggestions"
        android:layout_alignRight="@+id/uploadID"
        android:layout_alignEnd="@+id/uploadID"/>

    <EditText
        android:id="@+id/uploadCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textNoSuggestions"
        android:layout_alignTop="@+id/uploadCity"
        android:layout_toRightOf="@+id/uploadCity"
        android:layout_toEndOf="@+id/uploadCity"/>

    <MultiAutoCompleteTextView
        android:id="@+id/uploadDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:layout_below="@+id/uploadCountry"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/uploadCountry"
        android:layout_alignEnd="@+id/uploadCountry"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"/>

    <Button
        android:id="@+id/uploadSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/upload"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/uploadFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/uploadSubmit"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/select_picture" />

    <!--<RadioGroup
        android:id="@+id/uploadGeo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/uploadFile"
        android:layout_centerHorizontal="true" >

        <RadioButton
            android:id="@+id/uploadCurrentPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/current_position" />

        <RadioButton
            android:id="@+id/uploadGeoTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture_position" />
    </RadioGroup>-->

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/uploadFile"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:src="@android:color/transparent"
        android:contentDescription="@string/preview_picture"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/uploadDescription"
        android:text="@string/activate_gps" />

</RelativeLayout>